mongos shutdown procedure doesn't shutdown the CatalogCache

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.1.0-rc0, 7.0.0-rc1, 6.0.7, 5.0.19
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v7.0, v6.0, v5.0
    • Sharding EMEA 2023-05-15, Sharding EMEA 2023-05-29
    • 135
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When the mongos process gracefully terminates, the running CatalogCache's threads are not joined causing some memory leaks.

      As memory leaks at the process termination, the impact on the customers' business is definitely negligible, however a clean shutdown procedure should interrupt and join these running thread before closing the process.

            Assignee:
            Antonio Fuschetto
            Reporter:
            Antonio Fuschetto
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: