SERVER-76983 Shutdown and join the CatalogCached's thread pool when mongos terminates